--- a/docker/nginx/default.conf.template
+++ b/docker/nginx/default.conf.template
@@ -136,3 +136,57 @@ server {
         return 301 $scheme://$host/remote.php/dav;
     }
 }
+
+# ----------------- Collabora CODE Server ----------------- #
+
+upstream collabora_code_server {
+    zone collabora_code_server 64k;
+    server collabora-code:9980;
+    keepalive 2;
+}
+
+# ----------------- Collabora CODE Server (HTTPS) ----------------- #
+
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
+    server_name office.${DOMAIN};
+
+    ssl_certificate /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/${DOMAIN}/privkey.pem;
+
+    # static files
+    location ^~ /browser {
+        proxy_pass http://collabora_code_server;
+        proxy_set_header Host $http_host;
+    }
+
+    # WOPI discovery URL
+    location ^~ /hosting/discovery {
+        proxy_pass http://collabora_code_server;
+        proxy_set_header Host $http_host;
+    }
+
+    # Capabilities
+    location ^~ /hosting/capabilities {
+        proxy_pass http://collabora_code_server;
+        proxy_set_header Host $http_host;
+    }
+
+    # main websocket
+    location ~ ^/cool/(.*)/ws$ {
+        proxy_pass http://collabora_code_server;
+        proxy_set_header Host $http_host;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_read_timeout 3600s;
+    }
+
+    # download, presentation and image upload
+    location ~ ^/cool {
+        proxy_pass http://collabora_code_server;
+        proxy_set_header Host $http_host;
+    }
+}
