--- a/docker/nextcloud-aio/docker-compose.yml
+++ b/docker/nextcloud-aio/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - APACHE_IP_BINDING=0.0.0.0
       - BORG_RETENTION_POLICY=--keep-within=1d --keep-weekly=1 --keep-monthly=1
       - NEXTCLOUD_DATADIR=${DATA_DIR}/nextcloud
-
+      - NEXTCLOUD_KEEP_DISABLED_APPS=true
     volumes:
       - nextcloud_aio_mastercontainer:/mnt/docker-aio-config
       - /var/run/docker.sock:/var/run/docker.sock:ro
