--- a/docker/nextcloud-aio/docker-compose.yml
+++ b/docker/nextcloud-aio/docker-compose.yml
@@ -41,8 +41,10 @@ services:
       - ${BACKUP_DIR}/nextcloud:/backups/source
       - ./rclone.conf:/config/rclone/rclone.conf:ro
       - ./backup.sh:/usr/local/bin/backup.sh:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./.env:/app/.env:ro
     command: >
-      sh -c "apk add --no-cache rclone zip cronie &&
+      sh -c "apk add --no-cache rclone zip cronie docker-cli &&
            echo '0 6 * * * /usr/local/bin/backup.sh >> /var/log/cron.log 2>&1' > /var/spool/cron/crontabs/root &&
            crond -f"
     networks:
