feat(nextcloud-aio): Automate self-hosted Collabora setup
Adds a one-shot `collabora-configurator` service to automatically
configure the connection to the self-hosted Collabora instance

- A new `configure-collabora.sh` script waits for Nextcloud and uses
  `occ` to set the correct WOPI URLs for the `richdocuments` app
- Updates `docker-compose.yml` to run this new configurator service
- Adds helpful AIO management commands to the README

--- a/docker/nextcloud-aio/docker-compose.yml
+++ b/docker/nextcloud-aio/docker-compose.yml
@@ -13,9 +13,25 @@ services:
       - BORG_RETENTION_POLICY=--keep-within=1d --keep-weekly=1 --keep-monthly=1
       - NEXTCLOUD_DATADIR=${DATA_DIR}/nextcloud
       - NEXTCLOUD_KEEP_DISABLED_APPS=true
+      - START_CONTAINERS=1
     volumes:
       - nextcloud_aio_mastercontainer:/mnt/docker-aio-config
       - /var/run/docker.sock:/var/run/docker.sock:ro
+    networks:
+      - home-server
+  collabora-configurator:
+    image: docker:20.10
+    container_name: collabora-configurator
+    restart: "no"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./configure-collabora.sh:/usr/local/bin/configure-collabora.sh:ro
+    env_file:
+      - .env
+    command: "sh /usr/local/bin/configure-collabora.sh"
+    depends_on:
+      nextcloud-aio-mastercontainer:
+        condition: service_started
     networks:
       - home-server
   collabora-code:
