feat: Use DATA_DIR for persistent volumes for vw and nginx
- also use the DATA_DIR .env variable to define the base path for
  persistent data volumes for vaultwarden and nginx also
- this change allows for configuring the storage location of data like
  Let's Encrypt certificates and Vaultwarden data outside of the
  project directory, improving flexibility
- the README.md and docker-compose.yml files for both the nginx and
  vaultwarden services have been updated accordingly

--- a/docker/nginx/docker-compose.yml
+++ b/docker/nginx/docker-compose.yml
@@ -5,9 +5,9 @@ services:
         restart: unless-stopped
         networks:
             home-server:
-              aliases:
-                - "nextcloud.${DOMAIN}"
-                - "office.${DOMAIN}"
+                aliases:
+                    - "nextcloud.${DOMAIN}"
+                    - "office.${DOMAIN}"
             nextcloud-aio:
         ports:
             - "80:80"
@@ -16,7 +16,7 @@ services:
             - .env
         volumes:
             - ./default.conf.template:/etc/nginx/templates/default.conf.template
-            - ./letsencrypt/conf:/etc/letsencrypt
+            - ${DATA_DIR}/letsencrypt:/etc/letsencrypt
             - ./nginx-entrypoint.sh:/nginx-entrypoint.sh
         entrypoint: /nginx-entrypoint.sh
     certbot:
@@ -26,7 +26,7 @@ services:
         env_file:
             - .env
         volumes:
-            - ./letsencrypt/conf:/etc/letsencrypt
+            - ${DATA_DIR}/letsencrypt:/etc/letsencrypt
             - ./certbot-entrypoint.sh:/certbot-entrypoint.sh
         entrypoint: /certbot-entrypoint.sh
 networks:
