--- a/docker/nginx/default.conf.template
+++ b/docker/nginx/default.conf.template
@@ -193,3 +193,34 @@ server {
         proxy_set_header Host $http_host;
     }
 }
+
+# ----------------- Ring Server ----------------- #
+
+upstream ring_server_app {
+    zone ring_server_app 64k;
+    server ring-server:3000 resolve;
+    keepalive 2;
+}
+
+# ----------------- Ring Server (HTTPS) ----------------- #
+
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
+
+    server_name ring.${DOMAIN};
+
+    ssl_certificate /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/${DOMAIN}/privkey.pem;
+
+    add_header Strict-Transport-Security "max-age=15552000; includeSubDomains" always;
+
+    location / {
+        proxy_pass http://ring_server_app;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
