refactor(ring): improved server robustness and error handling
- this commit overhauls the Ring server for improved stability
- refactored initialization logic to validate environment variables
  upfront and handle connection failures gracefully.
- enhanced error handling with more specific feedback for API
  connection and device unlock errors
- improved .env file watching with debouncing to prevent
  race conditions

--- a/docker/ring/Dockerfile
+++ b/docker/ring/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:18-alpine AS builder
 WORKDIR /app
-COPY package.json package-lock.json ./
+COPY package.json ./
 RUN npm install
 COPY . .
 RUN npm run build
@@ -12,7 +12,7 @@ RUN apk add --no-cache bash
 
 RUN npm install -g ring-client-api@11.7.1
 
-COPY package.json package-lock.json ./
+COPY package.json ./
 RUN npm install --omit=dev
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/get_ring_token.sh .
